# lib/server/server.js
@@ -36,6 +36,8 @@ const ALLOWED_PARAMS = [
   "projectGroup",
   "projectTag",
   "projectVersion",
+  "autoCreate",
+  "isLatest",
   "parentUUID",
   "parentProjectName",
   "parentProjectVersion",
